# tidb-bench

./: .gitignore  README.md  main.go  utils.go
TiAggregate/: README.md
TiAggregate/queries/: gen_query.py
TiAggregate/scripts/: create_table.sql
TiAggregate/src/: column.h  main.cc  table.h
abm/: README.md
abm/docs/: cn.md  tables.md
abm/queries/: README.md  del_query.py  gen_query.py
abm/scripts/: load_data.sh  run-sql.py
abm/src/: CMakeLists.txt  column.h  main.cc  table.h
docker/tidb-bench/: Dockerfile  README.md  build.sh
docker/tidb-sysbench/: Dockerfile  README.md  build.sh  release.sh
rocksdb/: README.md  bench.arg  rocksdb.cpp
sql-bench/: README.md  main.go  run.sh  test.sql
sql-bench/parse/: parse.go
ssb/: README.md  create_table.sql  ddl.sql
ssb/dbgen/: README.md  (+5 more)
store_bench/: CMakeLists.txt  README.md  main.cpp
sysbench/: README.md  cleanup.sh  conf.sh  config  delete.sh  insert.sh  oltp.sh  oltp_insert_ignore.lua  parallel-prepare.sh  prepare.sh  run.sh  select.sh  update_index.sh  update_non_index.sh
sysbench-patch/: README.md
tpcc/: README.md  add_idx.sql  load.sh  tpcc_load  tpcc_start
tpcds/: .gitignore  README.md  genquery.sh  load_data.sh
tpch/: Makefile  README  README.md  README.orig  _env.sh  alltable.load  analyze.sh  dss.sql  dss_tiflash.sql  gen_load_script.sh  gen_load_tiflash.sh  get-all-query-time.pl  get-query-time.pl  load.sh  main.go  stats_load.sql  table_count.sql  tablescanquery.pl  tidb-lightning.toml  tikv-importer.toml
workload/: db.go  generator.go  main.go  table.go  workload.go  workload.toml
(+1861 files in other folders)
